# play

./: .gitignore  CMakeLists.txt  README.md
aux/: notes.md  plot_tsv.py
src/: LittleEndianReader.cpp  LittleEndianReader.h  OutputStream.cpp  OutputStream.h  Track.cpp  Track.h  error.cpp  error.h  main.cpp  read.cpp  read.h  track_play.cpp
